objects/Game_Result_Stat__mdt.object
<CustomObject>
    <fields>
        <fullName>DeviceType__c</fullName>
        <label>DeviceType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GameName__c</fullName>
        <label>GameName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallAverageCorrectAnswers__c</fullName>
        <label>OverallAverageCorrectAnswers</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverallAverageReactionTime__c</fullName>
        <label>OverallAverageReactionTime</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Game Result Stat</label>
    <pluralLabel>Game Result Stats</pluralLabel>
</CustomObject>